--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         DISCORD_USERNAME: KrakenGIT
         DISCORD_AVATAR: https://i.imgur.com/e3C2ov1.png
+        DISCORD_MULTILINE: 1
       uses: ezworx/action-discord@main
       with:
         args: '🚀 - Commit has been pushed to {{ EVENT_PAYLOAD.repository.full_name }}.\n✨ - Commit: {{ EVENT_PAYLOAD.commits[0].message }}.'
